@@ -9,19 +9,18 @@ import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.logging.Logger;
 
 public final class JpaUtil {
     private static final Logger LOGGER = Logger.getLogger(JpaUtil.class.getName());
     private static final Map<String, String> DOTENV = loadDotenv();
-    private static final EntityManagerFactory EMF = Persistence.createEntityManagerFactory("pdciaePU",
-            buildOverrides());
+    private static final EntityManagerFactory EMF = Persistence.createEntityManagerFactory(
+            "pdciaePU", buildOverrides());
 
     private JpaUtil() {
     }
@@ -31,7 +30,8 @@ public final class JpaUtil {
 
         String dbUrl = firstNonBlank(env("DB_URL"), env("DATABASE_URL"), env("JDBC_DATABASE_URL"));
         if (!dbUrl.isBlank()) {
-            overrides.put("jakarta.persistence.jdbc.driver", firstNonBlank(env("DB_DRIVER"), "org.postgresql.Driver"));
+            overrides.put("jakarta.persistence.jdbc.driver",
+                    firstNonBlank(env("DB_DRIVER"), "org.postgresql.Driver"));
             overrides.put("jakarta.persistence.jdbc.url", dbUrl);
 
             String dbUser = firstNonBlank(env("DB_USER"), env("DATABASE_USER"));
@@ -44,10 +44,11 @@ public final class JpaUtil {
                 overrides.put("jakarta.persistence.jdbc.password", dbPassword);
             }
 
-            overrides.put("hibernate.dialect", firstNonBlank(env("HIBERNATE_DIALECT"), "org.hibernate.dialect.PostgreSQLDialect"));
+            overrides.put("hibernate.dialect",
+                    firstNonBlank(env("HIBERNATE_DIALECT"), "org.hibernate.dialect.PostgreSQLDialect"));
             LOGGER.info("JPA configurado con base externa: " + safeDbUrl(dbUrl));
         } else {
-            LOGGER.warning("No se encontro DB_URL/DATABASE_URL. Se usara la configuracion por defecto de persistence.xml.");
+            LOGGER.warning("No se encontró DB_URL/DATABASE_URL. Se usará la configuración por defecto de persistence.xml.");
         }
 
         String ddlAuto = env("HIBERNATE_HBM2DDL_AUTO");
@@ -74,18 +75,16 @@ public final class JpaUtil {
     }
 
     private static Map<String, String> loadDotenv() {
-        Map<String, String> values = new HashMap<>();
+        Map<String, String> values = new LinkedHashMap<>();
         Path path = findDotenvPath();
-        if (!Files.exists(path)) {
-            LOGGER.info("No se encontro archivo .env en rutas candidatas.");
+        if (path == null || !Files.exists(path)) {
             return values;
         }
 
         try {
-            LOGGER.info("Cargando variables desde .env: " + path.toAbsolutePath());
             for (String line : Files.readAllLines(path, StandardCharsets.UTF_8)) {
                 String trimmed = line.trim();
-                if (trimmed.startsWith("#") || !trimmed.contains("=")) {
+                if (trimmed.isBlank() || trimmed.startsWith("#") || !trimmed.contains("=")) {
                     continue;
                 }
 
@@ -110,25 +109,31 @@ public final class JpaUtil {
     }
 
     private static Path findDotenvPath() {
-        List<Path> seeds = new ArrayList<>();
-        seeds.add(Path.of("").toAbsolutePath());
+        List<Path> candidates = new ArrayList<>();
 
-        addIfPresent(seeds, systemPath("user.dir"));
-        addIfPresent(seeds, systemPath("catalina.base"));
-        addIfPresent(seeds, classLocationPath());
+        addIfPresent(candidates, systemPath("user.dir"));
+        addIfPresent(candidates, systemPath("catalina.base"));
+        addIfPresent(candidates, systemPath("catalina.home"));
+        addIfPresent(candidates, classLocationPath());
 
-        for (Path seed : seeds) {
-            Path current = seed;
-            for (int i = 0; i < 20 && current != null; i++) {
-                Path candidate = current.resolve(".env");
-                if (Files.exists(candidate)) {
-                    return candidate;
+        for (Path candidate : candidates) {
+            Path current = candidate;
+            for (int i = 0; i < 6 && current != null; i++) {
+                Path dotenv = current.resolve(".env");
+                if (Files.exists(dotenv)) {
+                    return dotenv;
                 }
                 current = current.getParent();
             }
         }
 
-        return Path.of(".env").toAbsolutePath();
+        return Path.of(".env");
+    }
+
+    private static void addIfPresent(List<Path> candidates, Path path) {
+        if (path != null) {
+            candidates.add(path);
+        }
     }
 
     private static Path systemPath(String key) {
@@ -136,23 +141,17 @@ public final class JpaUtil {
         if (value == null || value.isBlank()) {
             return null;
         }
-        return Paths.get(value).toAbsolutePath();
+        return Path.of(value);
     }
 
     private static Path classLocationPath() {
         try {
-            return Paths.get(JpaUtil.class.getProtectionDomain().getCodeSource().getLocation().toURI()).toAbsolutePath();
+            return Path.of(Objects.requireNonNull(JpaUtil.class.getProtectionDomain().getCodeSource()).getLocation().toURI())
+                    .getParent();
         } catch (URISyntaxException | NullPointerException ex) {
             return null;
         }
     }
-
-    private static void addIfPresent(List<Path> seeds, Path candidate) {
-        if (candidate != null && !seeds.contains(candidate)) {
-            seeds.add(candidate);
-        }
-    }
-
 
     private static String firstNonBlank(String... values) {
         for (String value : values) {
@@ -187,4 +186,3 @@ public final class JpaUtil {
         }
     }
 }
-
